apps/ingress/ingress-tokamak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tokamak
spec:
  ingressClassName: nginx
  rules:
  - host: explorer.local.tokamak.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blockscout-svc
            port:
              number: 80
  - host: gateway.local.tokamak.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-gateway-svc
            port:
              number: 80
